--- a/10 Tìm hiểu các loại giá trị trong Sass/package.json
+++ b/10 Tìm hiểu các loại giá trị trong Sass/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "demo-sass",
+  "name": "10 Tìm hiểu các loại giá trị trong Sass",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
